# aibi-migration-hackton

./: .gitignore  README.md  RULES.md  app.py  app.yaml  app.yml  databricks.yml  pyproject.toml  requirements.txt
aibi_migrator/: __init__.py  genie_copy.py  genie_serialized.py  llm_migrate.py  migration_pack.py  parity_manifest.py  visual_mapping.py  workspace_deploy.py
aibi_migrator/canonical/: __init__.py  models.py
aibi_migrator/classify/: __init__.py  classifier.py
aibi_migrator/dbx_client/: __init__.py  workspace.py
aibi_migrator/knowledge/: README.md  __init__.py
aibi_migrator/lakeview/: __init__.py  dashboard_builder.py  minimal.py
aibi_migrator/pbit_extract/: __init__.py  parser.py
resources/: pbi_aibi_migrator.app.yml
tests/: test_genie_copy.py  test_genie_serialized.py  test_knowledge_bundled.py  test_lakeview_builder.py  test_llm_migrate.py  test_migration_pack.py  test_parity_manifest.py  test_pbit_parser.py  test_semantic_extract.py  test_workspace_deploy_llm.py  test_workspace_serving_chat.py
