[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aibi-migrator"
version = "0.1.0"
description = "Power BI (.pbit) to Databricks AI/BI migration assistant (Streamlit)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.38",
  "databricks-sdk>=0.36",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
